[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/graphics/Cards/card_background.png" type="Texture" id=1]
[ext_resource path="res://assets/graphics/Characters/icon_r2d2.png" type="Texture" id=2]
[ext_resource path="res://scenes/card.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/font_question.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/fonts/font_character_name.tres" type="DynamicFont" id=5]

[node name="card" type="Node2D"]
script = ExtResource( 3 )

[node name="background" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="lbl_character_name" type="Label" parent="."]
margin_left = 19.2672
margin_top = 39.1781
margin_right = 218.267
margin_bottom = 137.178
custom_fonts/font = ExtResource( 5 )
text = "CHARACTER"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_question" type="Label" parent="."]
margin_left = 54.0
margin_top = 170.0
margin_right = 312.0
margin_bottom = 304.0
custom_fonts/font = ExtResource( 4 )
text = "Ola!
"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="character" type="Sprite" parent="."]
position = Vector2( 224.053, 0 )
texture = ExtResource( 2 )
centered = false

[node name="btn_choice_1" type="Button" parent="."]
margin_left = 54.3273
margin_top = 322.99
margin_right = 312.327
margin_bottom = 364.99
custom_fonts/font = ExtResource( 4 )
text = "Tothetuho"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_choice_2" type="Button" parent="."]
margin_left = 54.3273
margin_top = 379.99
margin_right = 312.327
margin_bottom = 421.99
custom_fonts/font = ExtResource( 4 )
text = "Tothetuho"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="btn_choice_1" to="." method="_on_btn_choice_1_pressed"]
[connection signal="pressed" from="btn_choice_2" to="." method="_on_btn_choice_2_pressed"]
